--- a/package.json
+++ b/package.json
@@ -13,5 +13,49 @@
   "license": "ISC",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "type": "module",
+  "devDependencies": {
+    "@babel/core": "^7.17.7",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/types": "^7.17.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-virtual": "^2.1.0",
+    "@types/hash-sum": "^1.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/puppeteer": "^5.4.5",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "brotli": "^1.3.2",
+    "chalk": "^5.0.1",
+    "enquirer": "^2.3.6",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "execa": "^6.1.0",
+    "fs-extra": "^10.0.1",
+    "minimist": "^1.2.5",
+    "pinia": "^2.0.12",
+    "prettier": "^2.6.0",
+    "rollup": "^2.70.1",
+    "rollup-plugin-dts": "^4.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "semver": "^7.3.5",
+    "typescript": "^4.6.2",
+    "vue": "^3.2.31",
+    "zlib": "^1.0.5",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@volar/vue-language-service": "^0.33.2",
+    "eslint-plugin-vue": "^8.5.0",
+    "less": "^4.1.2",
+    "vite": "^2.8.6",
+    "vue-eslint-parser": "^8.3.0"
+  }
 }
