--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vite": "^2.8.6",
     "vue": "^3.2.31",
     "vue-eslint-parser": "^8.3.0",
-    "vue-tsc": "^0.33.7"
+    "vue-tsc": "^0.33.7",
+    "gh-pages": "^3.2.3"
   }
 }
