--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "vuepress": "^1.9.7"
+    "vuepress": "^1.9.7",
+    "gh-pages": "^3.2.3"
   }
 }
