--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "docs",
+  "name": "vfm-docs",
   "version": "0.0.0",
+  "private": "true",
   "description": "vfm docs",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "docs:dev": "vuepress dev src",
+    "docs:build": "vuepress build src",
     "docs:deploy": "gh-pages --dist './docs/.vuepress/dist/' --src '**/*'"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "vuepress": "^1.9.7",
-    "gh-pages": "^3.2.3"
+    "vuepress": "2.0.0-beta.43",
+    "gh-pages": "^3.2.3",
+    "vue": "^3.2.0",
+    "vfm": "0.2.1",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.38",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.38",
+    "@vuepress/plugin-register-components": "^2.0.0-beta.38",
+    "@vuepress/bundler-vite": "^2.0.0-beta.35.17"
   }
 }
