--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "gh-pages": "^3.2.3",
     "less": "^4.1.2",
     "prettier": "^2.6.0",
     "rollup": "^2.70.1",
@@ -39,11 +40,12 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-vue": "^6.0.0",
+    "tsd": "^0.20.0",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
+    "vitest": "^0.10.5",
     "vue": "^3.2.31",
     "vue-eslint-parser": "^8.3.0",
-    "vue-tsc": "^0.33.7",
-    "gh-pages": "^3.2.3"
+    "vue-tsc": "^0.33.7"
   }
 }
