--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tsd": "^0.20.0",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
+    "vitepress": "^0.22.4",
     "vitest": "^0.10.5",
     "vue": "^3.2.31",
     "vue-eslint-parser": "^8.3.0",
