--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "docs:dev": "vuepress dev src",
     "docs:build": "vuepress build src",
-    "docs:deploy": "gh-pages --dist './docs/.vuepress/dist/' --src '**/*'"
+    "docs:deploy": "gh-pages --dist './src/.vuepress/dist/' --src '**/*'"
   },
   "author": "",
   "license": "MIT",
