--- a/package.json
+++ b/package.json
@@ -41,12 +41,19 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-vue": "^6.0.0",
     "tsd": "^0.20.0",
+    "typedoc": "^0.22.17",
+    "typedoc-plugin-markdown": "^3.12.1",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vitepress": "^0.22.4",
     "vitest": "^0.10.5",
     "vue": "^3.2.31",
+    "vue-docgen-cli": "^4.45.0",
     "vue-eslint-parser": "^8.3.0",
     "vue-tsc": "^0.33.7"
+  },
+  "dependencies": {
+    "@types/lodash-es": "^4.17.6",
+    "lodash-es": "^4.17.21"
   }
 }
