--- a/packages/vfm/package.json
+++ b/packages/vfm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vfm",
   "version": "1.1.0",
-  "description": "Vue driven form management tool。",
+  "description": "Form Validation for Vue3.",
   "main": "dist/vfm.es.js",
   "types": "dist/types/index.d.ts",
   "type": "module",
