--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "rm -rf node_modules/@types/react"
   },
   "author": "",
   "license": "ISC",
@@ -50,9 +51,7 @@
     "vue": "^3.2.31",
     "vue-docgen-cli": "^4.45.0",
     "vue-eslint-parser": "^8.3.0",
-    "vue-tsc": "^0.33.7"
-  },
-  "dependencies": {
+    "vue-tsc": "^0.37.3",
     "@types/lodash-es": "^4.17.6",
     "lodash-es": "^4.17.21"
   }
