--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vfm-project",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "directories": {
@@ -21,7 +22,8 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/types": "^7.17.0",
     "@types/hash-sum": "^1.0.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^27.5.2",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.21",
     "@types/puppeteer": "^5.4.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-vue": "^8.5.0",
     "gh-pages": "^3.2.3",
     "less": "^4.1.2",
+    "lodash-es": "^4.17.21",
     "prettier": "^2.6.0",
     "rollup": "^2.70.1",
     "rollup-plugin-dts": "^4.2.0",
@@ -42,7 +45,7 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-vue": "^6.0.0",
     "tsd": "^0.20.0",
-    "typedoc": "^0.22.17",
+    "typedoc": "^0.23.6",
     "typedoc-plugin-markdown": "^3.12.1",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
@@ -51,8 +54,6 @@
     "vue": "^3.2.31",
     "vue-docgen-cli": "^4.45.0",
     "vue-eslint-parser": "^8.3.0",
-    "vue-tsc": "^0.37.3",
-    "@types/lodash-es": "^4.17.6",
-    "lodash-es": "^4.17.21"
+    "vue-tsc": "^0.37.3"
   }
 }
