--- a/packages/vfm/tsconfig.json
+++ b/packages/vfm/tsconfig.json
@@ -25,7 +25,7 @@
   },
   "include": [
     "src",
-    "*.ts",
-    "example",
-  ]
+    "test"
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
