feat: add report type to form.fieldError

--- a/packages/vfm/tsconfig.json
+++ b/packages/vfm/tsconfig.json
@@ -25,7 +25,8 @@
   },
   "include": [
     "src",
-    "test"
+    "test",
+    "env.d.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
